tests/ui/borrow_conflict.stderr
Error [E0204]: `x` is being changed in this call, so it can't be used again here
  --> tests/ui/borrow_conflict.jet:7:17
    |
  7 |     both(mut x, x);
    |                 ^
 Why: while something is being changed, nobody else may be looking at it
 Fix: pass `mut x` only once, or copy first with `x .clone()`
