tests/ui/borrow_conflict.jet
fn both(mut a: Int, b: Int) {
    print(b);
}

fn main() {
    var x: Int = 1;
    both(mut x, x);
}
